--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Home - HealthyLife</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css" />
+	<link rel="stylesheet" type="text/css" href="style.css" />
 
 </head>
 <body>
 	<div id="page">
 		<div id="header">
 			<div>
-				<a href="index.html"><img src="images/logo.gif" alt="Logo" /></a>
+				<a href="index.html"><img src="logo.gif" alt="Logo" /></a>
 			</div>
 			<ul>
 				<li class="first current"><a href="index.html">Home</a></li>
@@ -25,16 +25,16 @@
 			<div id="home">
 				<ul>
 					<li class="first">
-						<a href="index.html"><img src="images/vegetables.jpg" alt="Image"/></a>
+						<a href="index.html"><img src="vegetables.jpg" alt="Image"/></a>
 						<p>Letas</p>
 					</li>
 					<li>
-						<a href="index.html"><img src="images/pastries.jpg" alt="Image"/></a>
+						<a href="index.html"><img src="pastries.jpg" alt="Image"/></a>
 						<p>glucos</p>
 					</li>
 				</ul>
 				<div>
-					<a href="index.html"><img src="images/strawberry-pastry.jpg" alt="Image" /></a>
+					<a href="index.html"><img src="strawberry-pastry.jpg" alt="Image" /></a>
 					<h1><a href="index.html"><span>Secrets of</span> <br />Healthy eating</a></h1>
 					<P>A healthy lifestyle involves many choices. Among them, choosing a balanced diet or healthy eating plan. So how do you choose a healthy eating plan? Let’s begin by defining what a healthy eating plan is.
 						According to the Dietary Guidelines for Americans 2015–2020, a healthy eating plan:
@@ -45,7 +45,7 @@ Stays within your daily calorie needs .......<a class="more" href="index.html">R
 
 
 
-<h1 color="pink">Eat Healthfully and Enjoy It!</h1></p>
+<h1 font-color="pink">Eat Healthfully and Enjoy It!</h1></p>
 				</div>
 			</div>
 		</div>
@@ -54,17 +54,17 @@ Stays within your daily calorie needs .......<a class="more" href="index.html">R
 				<div>
 					<ul>
 						<li>
-							<a href="index.html"><img src="images/baking-fruits.jpg" alt="Image" /></a>
+							<a href="index.html"><img src="baking-fruits.jpg" alt="Image" /></a>
 							<h2><a href="index.html">Baking Fruits</a></h2>
 							<p>relate nemapix andaisa apo boss <a class="more" href="index.html">Read more</a></p>
 						</li>
 						<li>
-							<a href="index.html"><img src="images/health-benefits.jpg" alt="Image" /></a>
+							<a href="index.html"><img src="health-benefits.jpg" alt="Image" /></a>
 							<h2><a href="index.html">Health Benefits</a></h2>
 							<p>ndimi moziva zvehealth boss tiudzeuwo tone... <a class="more" href="index.html">Read more</a></p>
 						</li>
 						<li>
-							<a href="index.html"><img src="images/vitamins.jpg" alt="Image" /></a>
+							<a href="index.html"><img src="vitamins.jpg" alt="Image" /></a>
 							<h2><a href="index.html">Vitamins in them</a></h2>
 							<p>ndozviziva kty handizvo zvawauchida but tell us more here... <a class="more" href="index.html">Read more</a></p>
 						</li>
