--- a/recipes.html
+++ b/recipes.html
@@ -3,14 +3,14 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Recipes - HealthyLife</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css" />
+	<link rel="stylesheet" type="text/css" href="style.css" />
 	
 </head>
 <body>
 	<div id="page">
 		<div id="header">
 			<div>
-				<a href="index.html"><img src="images/logo.gif" alt="Logo" /></a>
+				<a href="index.html"><img src="logo.gif" alt="Logo" /></a>
 			</div>
 			<ul>
 				<li class="first"><a href="index.html">Home</a></li>
@@ -25,22 +25,22 @@
 				<div class="aside">
 					<ul>
 						<li class="first">
-							<a href="index.html"><img src="images/freshly-picked.jpg" alt="Image" /></a>
+							<a href="index.html"><img src="freshly-picked.jpg" alt="Image" /></a>
 							<a href="index.html">Freshly picked</a>
 						</li>
 						<li>
-							<a href="index.html"><img src="images/fruit-desserts.jpg" alt="Image" /></a>
+							<a href="index.html"><img src="fruit-desserts.jpg" alt="Image" /></a>
 							<a href="index.html">Pastry Fruit Desserts</a>
 						</li>
 						<li>
-							<a href="index.html"><img src="images/fruit-recipes.jpg" alt="Image" /></a>
+							<a href="index.html"><img src="fruit-recipes.jpg" alt="Image" /></a>
 							<a href="index.html">Fruity Recipes</a>
 						</li>
 					</ul>
 				</div>
 				<div>
 					<h2 class="first">Strawberry Cream Tart</h2>
-					<img src="images/strawberry-tart.jpg" alt="Image" />
+					<img src="strawberry-tart.jpg" alt="Image" />
 					<b>2 1/2  cup milk,</b>
 					<b>3 tablespoons chopped fresh mhiripiri</b>
 					<b>2 cloves of baby milk</b>
