--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,14 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Contact Us - HealthyLife</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css" />
+	<link rel="stylesheet" type="text/css" href="style.css" />
 
 </head>
 <body>
 	<div id="page">
 		<div id="header">
 			<div>
-				<a href="index.html"><img src="images/logo.gif" alt="Logo" /></a>
+				<a href="index.html"><img src="logo.gif" alt="Logo" /></a>
 			</div>
 			<ul>
 				<li class="first"><a href="index.html">Home</a></li>
