--- a/index.html
+++ b/index.html
@@ -56,17 +56,27 @@ Stays within your daily calorie needs .......<a class="more" href="index.html">R
 						<li>
 							<a href="index.html"><img src="baking-fruits.jpg" alt="Image" /></a>
 							<h2><a href="index.html">Baking Fruits</a></h2>
-							<p>relate nemapix andaisa apo boss <a class="more" href="index.html">Read more</a></p>
+							<p>
+								<ul>INGREDIENTS:
+									<li>1 cup sour cream</li>
+									<li>1 cup defrosted cool whip</li>
+									<li>1 15 oz can mandarin oranges drained</li>
+									<li>1 15 oz can pineapple chunks drained</li>
+									<li>1 cup mini marshmallows</li>
+									<li>1 2 oz jar maraschino cherries drained and roughly chopped</li>
+									<li>1/4 cup chopped walnuts</li>
+								</ul>
+								..<a class="more" href="index.html">Read more</a></p>
 						</li>
 						<li>
 							<a href="index.html"><img src="health-benefits.jpg" alt="Image" /></a>
 							<h2><a href="index.html">Health Benefits</a></h2>
-							<p>ndimi moziva zvehealth boss tiudzeuwo tone... <a class="more" href="index.html">Read more</a></p>
+							<p>Salads help protect the body from diseases such as cancer and heart disease because they are high in fiber which improves digestive health. The raw fruits and vegetables in a salad also are antioxidants. Just add a hand full of blueberries and walnuts to a salad to up the health factor significantly <a class="more" href="index.html">Read more</a></p>
 						</li>
 						<li>
 							<a href="index.html"><img src="vitamins.jpg" alt="Image" /></a>
 							<h2><a href="index.html">Vitamins in them</a></h2>
-							<p>ndozviziva kty handizvo zvawauchida but tell us more here... <a class="more" href="index.html">Read more</a></p>
+							<p>Vitamins. As the table demonstrates, blackberries are a rich source of vitamin C and K1. Although they contain a wide range of further vitamins, none of these are in high concentrations.... <a class="more" href="index.html">Read more</a></p>
 						</li>
 					</ul>
 				</div>
