--- a/about.html
+++ b/about.html
@@ -40,14 +40,20 @@
 				</div>
 				<div>
 					<h1>About the <span>healthy life</span></h1>
-					<span>We Have Many Recipes for Everyone</span>
-					<p>For what you need to know: <a href="http://www.tendayielishama@gmail.com">Terms of Use</a>.rules protects us all .</p>
-					<span>comentary</span>
-					<p>Looking for more recipes? Just browse through all our <a href="http://www.elishamatendayi@gmail.com/">more infor</a> </p>
+					<span>We Have Many Recipes for Everyone:</span>
+					<p>We provide all recipes for vegetarian and non vegetarian from basic fruit recipes to comp-licated five star hotel staff aswell as the pressentation</p>
+					<span>Comentary</span>
+					<p>Looking for more recipes? Just browse through all our <a href="https://www.allrecipes.com/">more infor</a> </p>
 					<span>Be Part of Our Community</span>
-					<p>If you're experiencing issues and concerns about this Recipes, join the discussion <a href="http://www.tendayielishama@gmail.com">on our forum</a> and meet other people in the community who share the same interests with you.</p>
-					<span>other details</span>
-					<p>some things to note; <a href="http://www.tendayielishama.com">HealthyLife </a>. <br />project created by Elishama Tendayi<a href="http://www.elishamatendayi@gmail.com/">Master cooker</a>. </p>
+					<p>If you're experiencing issues and concerns about this Recipes,  and meet other people in the community who share the same interests with you.<a href="https://chat.whatsapp.com/KCcxb7DcgjeBDGtQ2YXWDQ">Click Here</p>
+					<span>Other Details</span>
+					<p>Basic Tomato Sauce Recipe is simple, tasty and easy to make. You can use it for seasoning pasta or in addition to other ingredients, in recipes such as Eggplant Parmigiana or deviled eggs, for example.
+
+Basic Tomato Sauce recipe needs, has main ingredient, red ripe tomatoes, such as perino tomatoes (San Marzano type), pizzutello, datterino, cherry tomatoes or cluster tomatoes. You have to remove their skin and seeds to make a passata, that is a basic sauce made only with crushed tomatoes. 
+
+If you have no desire or time to make the tomato passata, you can buy it already made. Usually you can find it on sale in bottles or glass jars. Doing so, you will save at least 20 minutes in the preparation of a basic tomato sauce recipe.
+
+In this recipe we’ll show you how to make a basic tomato sauce with fresh tomatoes from scratch, so let’s start with it! </p>
 				</div>
 			</div>
 		</div>
