--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
 					<span>Comentary</span>
 					<p>Looking for more recipes? Just browse through all our <a href="https://www.allrecipes.com/">more infor</a> </p>
 					<span>Be Part of Our Community</span>
-					<p>If you're experiencing issues and concerns about this Recipes,  and meet other people in the community who share the same interests with you.<a href="https://chat.whatsapp.com/KCcxb7DcgjeBDGtQ2YXWDQ">Click Here</p>
+					<p>If you're experiencing issues and concerns about this Recipes,  and meet other people in the community who share the same interests with you.<a href="https://chat.whatsapp.com/KCcxb7DcgjeBDGtQ2YXWDQ">Click Here</a></p>
 					<span>Other Details</span>
 					<p>Basic Tomato Sauce Recipe is simple, tasty and easy to make. You can use it for seasoning pasta or in addition to other ingredients, in recipes such as Eggplant Parmigiana or deviled eggs, for example.
 
