--- a/about.html
+++ b/about.html
@@ -43,9 +43,9 @@
 					<span>We Have Many Recipes for Everyone:</span>
 					<p>We provide all recipes for vegetarian and non vegetarian from basic fruit recipes to comp-licated five star hotel staff aswell as the pressentation</p>
 					<span>Comentary</span>
-					<p>Looking for more recipes? Just browse through all our <a href="https://www.allrecipes.com/">more infor</a> </p>
-					<span>Be Part of Our Community</span>
-					<p>If you're experiencing issues and concerns about this Recipes,  and meet other people in the community who share the same interests with you.<a href="https://chat.whatsapp.com/KCcxb7DcgjeBDGtQ2YXWDQ">Click Here</a></p>
+					<p>Many people are generally food lovers and because of that we have got more responses from people which are very positive and they love our recipes,If you looking for more recipes? Just browse through all our <a href="https://www.allrecipes.com/">more infor</a> </p>
+					<span>Be Part of Our Community:</span>
+					<p>So many people from different parts of the world visit our site to share information concerning different types of recipes and for that reason we decided to create chat groups utilising our social networks so we make sure that we all get a chance to belong and learn aswell about more recipes especially from different cultures.If you're experiencing issues and concerns about this Recipes,  and meet other people in the community who share the same interests with you.<a href="https://chat.whatsapp.com/KCcxb7DcgjeBDGtQ2YXWDQ">Click Here</a></p>
 					<span>Other Details</span>
 					<p>Basic Tomato Sauce Recipe is simple, tasty and easy to make. You can use it for seasoning pasta or in addition to other ingredients, in recipes such as Eggplant Parmigiana or deviled eggs, for example.
 
