--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 				<li><a href="recipes.html">Recipes</a></li>
 				<li><a href="about.html">About us</a></li>
 				<li class="last"><a href="contact.html">Contact Us</a></li>
+				<li>WELCOME!</a></li>
 			</ul>
 		</div>
 		<div id="content">
